# dsh

./: .gitignore  Cargo.toml  README
ai-engine/: Cargo.toml
ai-engine/src/: args.rs  lib.rs  openai.rs  utils.rs
dsh/: Cargo.toml
dsh/src/: main.rs  utils.rs
dsh/src/builtins/: cd.rs
dsh/src/internals/: commands.rs  mod.rs  shell.rs
ml-engine/: Cargo.toml
