[package]
name = "ai-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[dependencies]
libc.workspace = true
rand = "0.8.5"
hf-hub = "0.3.2"
accelerate-src = "*"
candle-core = "0.3.0"
tokenizers = { version="*", features = ["onig"] }
rayon = "*"
safetensors = "*"
serde = "*"
serde_json = "*"
candle-datasets = { version = "0.3.0" }
candle-nn = { version = "0.3.0" }
candle-transformers = { version = "0.3.0" }
candle-flash-attn = { version = "0.3.0", optional = true }
anyhow = "1.0.75"

[build]
rustflags = ["-C", "target-cpu=native"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=-avx,-avx2"]