[package]
name = "dsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
debug = false

[dependencies]
ai-engine = {path = "../ai-engine"}
whoami = "1.4.1"
ctrlc = "3.4.1"
ratatui = "0.23.0"
crossterm = "0.27.0"
libc.workspace = true
anyhow.workspace = true
regex.workspace = true
tokio = { version = "1.33.0", features = ["full"] }
